--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="./CSS/normalize.css.html" />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/main.min.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -17,30 +18,30 @@
       <div class="container main-nav">
         <nav class="main-nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-          <ul class="site-nav">
-            <li class="site-item">
-              <a href="#" class="site-link current">Студия</a>
+          <ul class="nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link current">Студия</a>
             </li>
-            <li class="site-item">
-              <a href="./portfolio.html" class="site-link">Портфолио</a>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
-            <li class="site-item">
-              <a href="#" class="site-link">Контакты</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact-nav">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">
-              <svg class="icon" width="16" height="12">
+        <ul class="contact-header">
+          <li class="contact-header-item">
+            <a class="contact-header-link" href="mailto:info@devstudio.com">
+              <svg class="contact-header-icon" width="16" height="12">
                 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a class="link" href="tel:+380961111111">
-              <svg class="icon" width="10" height="16">
+          <li class="contact-header-item">
+            <a class="contact-header-link" href="tel:+380961111111">
+              <svg class="contact-header-icon" width="10" height="16">
                 <use xlink:href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -64,34 +65,36 @@
       </section>
 
       <!-- Наши приемущества -->
-      <section class="section-advantures">
-        <h2 hidden>Наши приемущества</h2>
+      <section class="section advantage">
+        <h2 class="sobtitle" hidden>Наши приемущества</h2>
         <div class="container advantages">
-          <ul class="title-advantages">
-            <li class="item">
-              <h3 class="section-title antenna">Внимание к деталям</h3>
-              <p class="title-item">
+          <ul class="advantages-title">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle antenna">Внимание к деталям</h3>
+              <p class="advantages-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-title clock">Пунктуальность</h3>
-              <p class="title-item">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle clock">Пунктуальность</h3>
+              <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-title diagram">Планирование</h3>
-              <p class="title-item">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle diagram">Планирование</h3>
+              <p class="advantages-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-title astronaut">Современные технологии</h3>
-              <p class="title-item">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle astronaut">
+                Современные технологии
+              </h3>
+              <p class="advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -142,9 +145,9 @@
           </ul>
         </div>
       </section>
-      <section class="section-work">
+      <section class="section team">
         <h2 class="subtitle">Наша команда</h2>
-        <div class="container work">
+        <div class="container team-work">
           <ul class="work-item">
             <li>
               <img
@@ -153,9 +156,9 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-name">Игорь Демьяненко</h3>
-              <p class="section-name-prof" lang="en">Product Designer</p>
-              <ul class="list social-icon-list">
+              <h3 class="team-name">Игорь Демьяненко</h3>
+              <p class="team-name-prof" lang="en">Product Designer</p>
+              <ul class="social-icon-list">
                 <li class="social-icon-item">
                   <a
                     class="social-icon-link"
@@ -212,8 +215,8 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-name">Ольга Репина</h3>
-              <p class="section-name-prof" lang="en">Frontend Developer</p>
+              <h3 class="team-name">Ольга Репина</h3>
+              <p class="team-name-prof" lang="en">Frontend Developer</p>
               <ul class="list social-icon-list">
                 <li class="social-icon-item">
                   <a
@@ -271,8 +274,8 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-name">Николай Тарасов</h3>
-              <p class="section-name-prof" lang="en">Marketing</p>
+              <h3 class="team-name">Николай Тарасов</h3>
+              <p class="team-name-prof" lang="en">Marketing</p>
               <ul class="list social-icon-list">
                 <li class="social-icon-item">
                   <a
@@ -331,8 +334,8 @@
                 width="270"
                 height="260"
               />
-              <h3 class="section-name">Михаил Ермаков</h3>
-              <p class="section-name-prof" lang="en">UI Designer</p>
+              <h3 class="team-name">Михаил Ермаков</h3>
+              <p class="team-name-prof" lang="en">UI Designer</p>
               <ul class="list social-icon-list">
                 <li class="social-icon-item">
                   <a
@@ -435,22 +438,26 @@
       </section>
     </main>
     <!-- Подвал сайта -->
-    <footer class="footers">
+    <footer>
       <div class="container footer">
         <div class="footer-box">
           <a href="./index.html" class="footer-logo">
             <span>Web</span>Studio
           </a>
           <address>
-            <p class="footer-contact">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="footer-contact-address">
+              г. Киев, пр-т Леси Украинки, 26
+            </p>
             <ul class="footer-contact-nav">
               <li>
-                <a class="link" href="mailto:info@devstudio.com"
+                <a class="footer-contact-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com
                 </a>
               </li>
               <li>
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11 </a>
+                <a class="footer-contact-link" href="tel:+380961111111"
+                  >+38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
@@ -460,25 +467,25 @@
           <ul>
             <li>
               <a
-                class="net insta"
+                class="footer-net insta"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net twit"
+                class="footer-net twit"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net face"
+                class="footer-net face"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net linkd"
+                class="footer-net linkd"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
@@ -488,7 +495,7 @@
         </div>
         <div class="footer-box-2">
           <b class="footer-appeal">Подпишитесь на рассылку</b>
-          <div class="input">
+          <div class="footer-form">
             <label for="footer-mail"></label>
             <input
               class="footer-input"
@@ -497,7 +504,7 @@
               id="footer-mail"
               placeholder="E-mail"
             />
-            <button class="send" type="button">
+            <button class="btn-send" type="button">
               Подписаться
               <svg class="img-send" width="24" height="24">
                 <use href="./images/sprite.svg#icon-icon-send"></use>
@@ -510,7 +517,7 @@
     <!-- Модальное окно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="btn-close" data-modal-close>
+        <button class="btn-close-modal" data-modal-close>
           <svg class="close" width="11" height="11">
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
@@ -561,7 +568,7 @@
               <a class="link-consent" href="#">Условия договора</a>
             </label>
           </div>
-          <button type="submit" class="btn-send">Отправить</button>
+          <button type="submit" class="btn-send-modal">Отправить</button>
         </form>
       </div>
     </div>
