--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/normalize.css.html" />
-    <link rel="stylesheet" href="./CSS/styles.css" />
     <link rel="stylesheet" href="./CSS/main.min.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <header>
       <div class="container main-nav">
         <nav class="main-nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
