--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/normalize.css.html" />
-    <link rel="stylesheet" href="./CSS/portfolio.css" />
+    <link rel="stylesheet" href="./CSS/portfolio.min.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -17,30 +16,30 @@
       <div class="container main-nav">
         <nav class="main-nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-          <ul class="site-nav">
-            <li class="site-item">
-              <a href="./index.html" class="site-link">Студия</a>
+          <ul class="nav">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Студия</a>
             </li>
-            <li class="site-item">
-              <a href="#" class="site-link current">Портфолио</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link current">Портфолио</a>
             </li>
-            <li class="site-item">
-              <a href="#" class="site-link">Контакты</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact-nav">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com">
-              <svg class="icon" width="16" height="12">
+        <ul class="contact-header">
+          <li class="contact-header-item">
+            <a class="contact-header-link" href="mailto:info@devstudio.com">
+              <svg class="contact-header-icon" width="16" height="12">
                 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a class="link" href="tel:+380961111111">
-              <svg class="icon" width="10" height="16">
+          <li class="contact-header-item">
+            <a class="contact-header-link" href="tel:+380961111111">
+              <svg class="contact-header-icon" width="10" height="16">
                 <use xlink:href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -50,38 +49,38 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section btn">
         <h1 hidden>Наши работы</h1>
         <nav class="container">
           <!-- Кнопки -->
-          <ul class="flex-button">
-            <li class="item">
-              <button type="button" class="button-nav">Все</button>
+          <ul class="btn-portfolio">
+            <li class="portfolio-item">
+              <button type="button" class="portfolio-nav">Все</button>
             </li>
-            <li class="item">
-              <button type="button" class="button-nav">Веб-сайты</button>
+            <li class="portfolio-item">
+              <button type="button" class="portfolio-nav">Веб-сайты</button>
             </li>
-            <li class="item">
-              <button type="button" class="button-nav">Приложения</button>
+            <li class="portfolio-item">
+              <button type="button" class="portfolio-nav">Приложения</button>
             </li>
-            <li class="item">
-              <button type="button" class="button-nav">Дизайн</button>
+            <li class="portfolio-item">
+              <button type="button" class="portfolio-nav">Дизайн</button>
             </li>
-            <li class="item">
-              <button type="button" class="button-nav">Маркетинг</button>
+            <li class="portfolio-item">
+              <button type="button" class="portfolio-nav">Маркетинг</button>
             </li>
           </ul>
         </nav>
       </section>
       <!-- Галерея портфолио -->
-      <section class="section-gallery">
+      <section class="section gallerys">
         <h2 hidden>Галерея портфолио</h2>
         <nav class="container gallery">
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallary-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(0).jpg"
                   alt="Технокряк"
                   width="370"
@@ -89,7 +88,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -98,16 +97,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Технокряк</h3>
-                <p class="list">Веб-сайт</p>
+                <h3 class="gallary-title">Технокряк</h3>
+                <p class="gallary-list">Веб-сайт</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(1).jpg"
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
@@ -115,7 +114,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -124,16 +123,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                <p class="list">Дизайн</p>
+                <h3 class="gallary-title">Постер New Orlean vs Golden Star</h3>
+                <p class="gallary-list">Дизайн</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(2).jpg"
                   alt="Ресторан Seafood"
                   width="370"
@@ -141,7 +140,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -150,16 +149,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Ресторан Seafood</h3>
-                <p class="list">Приложение</p>
+                <h3 class="gallary-title">Ресторан Seafood</h3>
+                <p class="gallary-list">Приложение</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(3).jpg"
                   alt="Проект Prime"
                   width="370"
@@ -167,7 +166,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -176,16 +175,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Проект Prime</h3>
-                <p class="list">Маркетинг</p>
+                <h3 class="gallary-title">Проект Prime</h3>
+                <p class="gallary-list">Маркетинг</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(4).jpg"
                   alt="Проект Boxes"
                   width="370"
@@ -193,7 +192,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -202,16 +201,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Проект Boxes</h3>
-                <p class="list">Приложение</p>
+                <h3 class="gallary-title">Проект Boxes</h3>
+                <p class="gallary-list">Приложение</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(5).jpg"
                   alt="Inspiration has no Borders"
                   width="370"
@@ -219,7 +218,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -228,16 +227,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Inspiration has no Borders</h3>
-                <p class="list">Веб-сайт</p>
+                <h3 class="gallary-title">Inspiration has no Borders</h3>
+                <p class="gallary-list">Веб-сайт</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(6).jpg"
                   alt="Издание Limited Edition"
                   width="370"
@@ -245,7 +244,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -254,16 +253,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Издание Limited Edition</h3>
-                <p class="list">Дизайн</p>
+                <h3 class="gallary-title">Издание Limited Edition</h3>
+                <p class="gallary-list">Дизайн</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(7).jpg"
                   alt="Проект LAB"
                   width="370"
@@ -271,7 +270,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -280,16 +279,16 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Проект LAB</h3>
-                <p class="list">Маркетинг</p>
+                <h3 class="gallary-title">Проект LAB</h3>
+                <p class="gallary-list">Маркетинг</p>
               </li>
             </ul>
           </div>
-          <div class="flex">
-            <div class="flex-box">
-              <a class="flex-link" href="#">
+          <div class="gallery-us">
+            <div class="gallery-box">
+              <a class="gallery-link" href="#">
                 <img
-                  class="img"
+                  class="gallary-img"
                   src="./images/portfolio/img-(8).jpg"
                   alt="Growing Business"
                   width="370"
@@ -297,7 +296,7 @@
                 />
               </a>
               <div class="box-hover">
-                <p class="text">
+                <p class="gallary-text">
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
@@ -306,8 +305,8 @@
             </div>
             <ul class="flex-list">
               <li class="flex-item">
-                <h3 class="title">Growing Business</h3>
-                <p class="list">Приложение</p>
+                <h3 class="gallary-title">Growing Business</h3>
+                <p class="gallary-list">Приложение</p>
               </li>
             </ul>
           </div>
@@ -315,22 +314,26 @@
       </section>
     </main>
     <!-- Подвал сайта -->
-    <footer class="footers">
+    <footer>
       <div class="container footer">
         <div class="footer-box">
           <a href="./index.html" class="footer-logo">
             <span>Web</span>Studio
           </a>
           <address>
-            <p class="footer-contact">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="footer-contact-address">
+              г. Киев, пр-т Леси Украинки, 26
+            </p>
             <ul class="footer-contact-nav">
               <li>
-                <a class="link" href="mailto:info@devstudio.com"
+                <a class="footer-contact-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com
                 </a>
               </li>
               <li>
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11 </a>
+                <a class="footer-contact-link" href="tel:+380961111111"
+                  >+38 096 111 11 11
+                </a>
               </li>
             </ul>
           </address>
@@ -340,25 +343,25 @@
           <ul>
             <li>
               <a
-                class="net insta"
+                class="footer-net insta"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net twit"
+                class="footer-net twit"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net face"
+                class="footer-net face"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
               ></a>
               <a
-                class="net linkd"
+                class="footer-net linkd"
                 href="#"
                 target="_blank"
                 rel="noopened noreferrer"
@@ -368,7 +371,7 @@
         </div>
         <div class="footer-box-2">
           <b class="footer-appeal">Подпишитесь на рассылку</b>
-          <div class="input">
+          <div class="footer-form">
             <label for="footer-mail"></label>
             <input
               class="footer-input"
@@ -377,7 +380,7 @@
               id="footer-mail"
               placeholder="E-mail"
             />
-            <button class="send" type="button">
+            <button class="btn-send" type="button">
               Подписаться
               <svg class="img-send" width="24" height="24">
                 <use href="./images/sprite.svg#icon-icon-send"></use>
